name: lamdu
version: 1.0
cabal-version: 1.6
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: GLFW-b >=1.4.7.3 && <1.5, List >=0.5.1, OpenGL -any,
               QuickCheck >=2.8 && <2.9, StateVar -any, TraceUtils -any,
               TypeCompose -any, aeson >=0.6.2.1 && <0.9, base >=4,
               base-compat >=0.8.2 && <0.9, binary >=0.7, bytestring -any,
               containers >=0.4, cryptohash >=0.7, deepseq -any,
               deepseq-generics >=0.1, directory >=1.0.1.1, either -any,
               filepath >=1.1, graphics-drawingcombinators >=1.5.0.3,
               hashable -any, lens >=4.1, leveldb-haskell >=0.6,
               pretty >=1.1 && <1.1.2, prettyclass ==1.0.0.0, random >=1.0.0,
               split >=0.1, stm -any, template-haskell -any, time >=1.2,
               transformers >=0.2.1, utf8-string >=0.3, void >=0.6.1
stability: experimental
homepage:
package-url:
bug-reports:
synopsis:
description:
category:
author:
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
extra-doc-files:
Executable lamdu
  main-is: Lamdu/Main.hs
  buildable: True
  build-tools:
  cpp-options:
  cc-options:
  ld-options:
  pkgconfig-depends:
  frameworks:
  c-sources:
  default-language:
  other-languages:
  default-extensions:
  other-extensions:
  extensions:
  extra-libraries:
  extra-lib-dirs:
  includes:
  install-includes:
  include-dirs:
  hs-source-dirs:
  other-modules: Foreign.C.Types.Instances Data.List.Utils
                 Data.List.Assoc Data.Monoid.Instances Data.Monoid.Applicative
                 Data.Monoid.Generic Data.Hashable.Generic Data.CurAndPrev
                 Data.Store.Guid.Arbitrary Data.Store.Map Data.Store.IRef
                 Data.Store.Property Data.Store.Rev.Version Data.Store.Rev.Branch
                 Data.Store.Rev.View Data.Store.Rev.ViewBranchInternal
                 Data.Store.Rev.Change Data.Store.Db Data.Store.Transaction
                 Data.Binary.Utils Data.ByteString.Utils Data.ByteString.NFData
                 Data.Vector.Vector2 Data.Random.Instances Data.MRUMemo
                 Data.Function.Decycle Data.Maybe.Utils Data.Map.Utils
                 Data.Set.Ordered Lamdu.DefEvaluators Lamdu.CharClassification
                 Lamdu.VersionControl.Actions Lamdu.Eval.Background Lamdu.Eval.Val
                 Lamdu.Eval.ToExpr Lamdu.Eval.Results Lamdu.Font Lamdu.Sugar.Types
                 Lamdu.Sugar.EntityId Lamdu.Sugar.NearestHoles
                 Lamdu.Sugar.Convert.ParamList Lamdu.Sugar.Convert.DefExpr
                 Lamdu.Sugar.Convert.Apply Lamdu.Sugar.Convert.GetField
                 Lamdu.Sugar.Convert.List Lamdu.Sugar.Convert.Inject
                 Lamdu.Sugar.Convert.Hole.Suggest
                 Lamdu.Sugar.Convert.Hole.ResultScore Lamdu.Sugar.Convert.GetVar
                 Lamdu.Sugar.Convert.Record Lamdu.Sugar.Convert.Case
                 Lamdu.Sugar.Convert.Binder Lamdu.Sugar.Convert.Input
                 Lamdu.Sugar.Convert.Monad Lamdu.Sugar.Convert.TIdG
                 Lamdu.Sugar.Convert.Expression.Actions Lamdu.Sugar.Convert.Nominal
                 Lamdu.Sugar.Internal.EntityId Lamdu.Sugar.OrderTags
                 Lamdu.Sugar.Names.CPS Lamdu.Sugar.Names.Add Lamdu.Sugar.Names.Get
                 Lamdu.Sugar.Names.Types Lamdu.Sugar.Names.Walk
                 Lamdu.Sugar.Names.NameGen Lamdu.Sugar.Lens
                 Lamdu.Sugar.PresentationModes Lamdu.DataFile Lamdu.GUI.Main
                 Lamdu.GUI.VersionControl.Config Lamdu.GUI.DefinitionEdit
                 Lamdu.GUI.WidgetIds Lamdu.GUI.Precedence
                 Lamdu.GUI.CodeEdit.Settings Lamdu.GUI.Parens Lamdu.GUI.WidgetIdIRef
                 Lamdu.GUI.RedundantAnnotations Lamdu.GUI.Zoom Lamdu.GUI.ParamEdit
                 Lamdu.GUI.ExpressionGui.Types Lamdu.GUI.ExpressionGui.Monad
                 Lamdu.GUI.ExpressionEdit.BinderEdit
                 Lamdu.GUI.ExpressionEdit.CaseEdit Lamdu.GUI.ExpressionEdit.EventMap
                 Lamdu.GUI.ExpressionEdit.NomEdit Lamdu.GUI.ExpressionEdit.TagEdit
                 Lamdu.GUI.ExpressionEdit.RecordEdit
                 Lamdu.GUI.ExpressionEdit.ListEdit
                 Lamdu.GUI.ExpressionEdit.ApplyEdit
                 Lamdu.GUI.ExpressionEdit.LambdaEdit
                 Lamdu.GUI.ExpressionEdit.GetFieldEdit
                 Lamdu.GUI.ExpressionEdit.BuiltinEdit
                 Lamdu.GUI.ExpressionEdit.GetVarEdit
                 Lamdu.GUI.ExpressionEdit.InjectEdit
                 Lamdu.GUI.ExpressionEdit.LiteralEdit
                 Lamdu.GUI.ExpressionEdit.HoleEdit.Common
                 Lamdu.GUI.ExpressionEdit.HoleEdit.EventMap
                 Lamdu.GUI.ExpressionEdit.HoleEdit.ShownResult
                 Lamdu.GUI.ExpressionEdit.HoleEdit.ResultGroups
                 Lamdu.GUI.ExpressionEdit.HoleEdit.WidgetIds
                 Lamdu.GUI.ExpressionEdit.HoleEdit.State
                 Lamdu.GUI.ExpressionEdit.HoleEdit.Info
                 Lamdu.GUI.ExpressionEdit.HoleEdit.SearchArea
                 Lamdu.GUI.ExpressionEdit.HoleEdit.Open
                 Lamdu.GUI.ExpressionEdit.HoleEdit.Wrapper
                 Lamdu.GUI.ExpressionEdit.HoleEdit.SearchTerm Lamdu.GUI.EvalView
                 Lamdu.GUI.Scroll Lamdu.GUI.TypeView Lamdu.Style Lamdu.Expr.TypeVars
                 Lamdu.Expr.Val.Arbitrary Lamdu.Expr.Type.Match Lamdu.Expr.Pure
                 Lamdu.Expr.Lens Lamdu.Expr.RecordVal Lamdu.Expr.GenIds
                 Lamdu.Expr.Constraints Lamdu.Expr.Identifier Lamdu.Expr.Scheme
                 Lamdu.Expr.IRef.Infer Lamdu.Expr.FlatComposite Lamdu.Expr.UniqueId
                 Lamdu.Expr.Load Lamdu.Expr.Nominal Lamdu.Data.Anchors
                 Lamdu.Data.Ops Lamdu.Data.DbLayout Lamdu.Data.Definition
                 Lamdu.Data.ExampleDB Lamdu.Opts Lamdu.Builtins.Anchors
                 Lamdu.Config.Sampler Lamdu.Infer.Unify Lamdu.Infer.Update
                 Lamdu.Infer.Error Lamdu.Infer.Load Lamdu.Infer.Internal.Subst
                 Lamdu.Infer.Internal.Scope Lamdu.Infer.Internal.Monad
                 Lamdu.Infer.Internal.Constraints Lamdu.Infer.Internal.Scheme
                 Lamdu.Infer.Internal.Unify Lamdu.Infer.Recursive
                 Graphics.UI.Bottle.WidgetId Graphics.UI.Bottle.EventMap
                 Graphics.UI.Bottle.Direction Graphics.UI.Bottle.View
                 Graphics.UI.Bottle.Widget Graphics.UI.Bottle.Rect
                 Graphics.UI.Bottle.Animation.Id Graphics.UI.Bottle.Widgets.FlyNav
                 Graphics.UI.Bottle.Widgets.Layout Graphics.UI.Bottle.Widgets.Box
                 Graphics.UI.Bottle.Widgets.EventMapDoc
                 Graphics.UI.Bottle.Widgets.FocusDelegator
                 Graphics.UI.Bottle.Widgets.Grid Graphics.UI.Bottle.Widgets.GridView
                 Graphics.UI.Bottle.Widgets.Choice Graphics.UI.Bottle.Widgets.Spacer
                 Graphics.UI.Bottle.Widgets.TextEdit
                 Graphics.UI.Bottle.Widgets.StdKeys
                 Graphics.UI.Bottle.Widgets.TextView Graphics.UI.Bottle.ModKey
                 Graphics.UI.Bottle.WidgetsEnvT Graphics.UI.Bottle.SizedFont
                 Graphics.UI.Bottle.MainLoop Graphics.UI.GLFW.Events
                 Graphics.UI.GLFW.Utils Graphics.UI.GLFW.Instances
                 Graphics.DrawingCombinators.Utils
                 Text.PrettyPrint.HughesPJClass.Compat System.Random.Utils
                 Control.Monad.Trans.State.Utils Control.Monad.Trans.Either.Utils
                 Control.Monad.Trans.Decycle Control.Monad.Unit
                 Control.Concurrent.Utils Control.MonadA Control.Applicative.Utils
                 Control.Lens.Utils Numeric.Utils
  ghc-prof-options:
  ghc-shared-options:
  ghc-options:
  hugs-options:
  nhc98-options:
  jhc-options:
